--- a/client/package.json
+++ b/client/package.json
@@ -8,21 +8,38 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "@apollo/client": "^3.3.5",
+    "@babel/runtime": "^7.0.0-beta.55",
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.4",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@material-ui/icons": "^1.0.0",
+    "@mui/material": "^5.3.0",
+    "@mui/styles": "^5.3.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.18.0",
+    "connect-mongo": "^2.0.1",
+    "express-session": "^1.15.6",
     "framer-motion": "^5.6.0",
+    "fusioncharts": "^3.12.2",
     "graphql": "^15.8.0",
     "jwt-decode": "^3.1.2",
+    "material-ui": "^1.0.0-beta.42",
+    "moment": "^2.22.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-drop-to-upload": "^1.0.1",
+    "react-fusioncharts": "^1.0.5",
     "react-icons": "^4.3.1",
+    "react-router": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
+    "rebass": "^2.0.0-0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
