--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
-    "@mui/icons-material": "^5.2.5"
+    "@mui/icons-material": "^5.2.5",
+    "express": "^4.17.2"
   }
 }
