--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
     "@mui/icons-material": "^5.2.5",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "react-redux": "^7.2.6",
+    "react-redux-firebase": "^3.11.0"
   }
 }
